# obd_brz_gauge

./: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults  sdkconfig.defaults.esp32s3
docs/: PROJECT_STRUCTURE.md  README.en.md  README.zh-CN.md
firmware/: README.md
main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  idf_component.yml
main/app_obd_dsp/: obd_data_cache.c  obd_data_cache.h  vehicle_profiles.c  vehicle_profiles.h
main/bsp_obd_dsp/: bsp_board.h  elm327_ble_client.c  elm327_ble_client.h  nvs_storage.c  nvs_storage.h
main/bsp_obd_dsp/exio/: TCA9554PWR.c  TCA9554PWR.h
main/bsp_obd_dsp/i2c_driver/: I2C_Driver.c
main/bsp_obd_dsp/lcd_driver/: ST77916.c  ST77916.h
main/bsp_obd_dsp/touch_driver/: CST816.c  CST816.h
main/export_path/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
main/export_path/assets/: ui_font_FontBabyblock.c
main/export_path/fonts/: ui_font_FontBabyGearNumSize48.c  ui_font_FontBabySize108.c  ui_font_FontBabySize56.c  ui_font_FontTaikongSize108.c  ui_font_FontTaikongSize128.c  ui_font_FontTaikongSize32.c  ui_font_FontTaikongSize40.c  ui_font_FontTaikongSize48.c  ui_font_FontTaikongSize56.c  ui_font_FontTaikongSize64.c  ui_font_FontTaikongSize72.c  ui_font_FontTypoderSize100.c  ui_font_FontTypoderSize140.c  ui_font_FontTypoderSize16.c  ui_font_FontTypoderSize20.c  ui_font_FontTypoderSize24.c  ui_font_FontTypoderSize28.c  ui_font_FontTypoderSize32.c  ui_font_FontTypoderSize36.c  ui_font_FontTypoderSize40.c  ui_font_FontTypoderSize44.c  ui_font_FontTypoderSize56.c
main/export_path/images/: gifSnake400.c  pngLogoSkyGarage.c  ui_img_pngblackear_png.c  ui_img_pngmainback2_png.c  ui_img_pngmainback3_png.c  ui_img_pngmainback_png.c
main/export_path/screens/: ui_ScreenPageBLEScan.c  ui_ScreenPageEasterEgg.c  ui_ScreenPageGear.c  ui_ScreenPageInfo.c  ui_ScreenPageLogo.c  ui_ScreenPageMain.c  ui_ScreenPageODBProtocal.c  ui_ScreenPageRpm.c  ui_ScreenPageSettings.c  ui_ScreenPageSpeed.c  ui_ScreenPageTemp.c
tools/: png_to_lvgl.py
